--- a/html/index.html
+++ b/html/index.html
@@ -12,6 +12,8 @@
    <p>Activitat 1: imposible. <a href="act1/imposible.html" >enllaç</a> </p>
    <p>Activitat 2: Etiquetes bàsiques. <a href="act2/index.html" > enllaç</a></p>
    <p>Activitat 3: Atributs i comentaris. <a href="act3/index.html" > enllaç</a></p>
-   <p>Activitat 6:enllaç imagenes llistes.<a href="act6/index.html"> enllaç</a></p>
+   <p>Activitat 6,7,8:enllaç imagenes llistes.<a href="act6/index.html"> enllaç</a></p>
+   <p>Activitat 8:taules.<a href="act 8/index.html"> enllaç</a></p>
+   <p>Activitat 9:Head.<a href="act 9/index.html"> enllaç</a></p>
 </body>
 </html>
